:fork_and_knife: Removed candidate observations.
Changes to be committed:
	modified:   prepare.py
	modified:   wrangle.ipynb

wrangle: Added steps to remove observations with a CANDIDATE disposition
    since we are only interested in false positives and confirmed
    exoplanets.

prepare: Added code to remove observations with a CANDIDATE disposition.

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "60f3efb1-c279-401f-ad0c-5dfa8baf13d6",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "a0ac12be-bc5b-4df1-bbfe-2f432496e40c",
    "metadata": {},
    "outputs": [
@@ -78,8 +78,8 @@
      "output_type": "stream",
      "text": [
       "Downloading cumulative.csv.zip to /Users/whoami/Repositories/kepler-exoplanet-analysis\n",
-      " 86%|████████████████████████████████▊     | 1.00M/1.16M [00:00<00:00, 6.11MB/s]\n",
-      "100%|██████████████████████████████████████| 1.16M/1.16M [00:00<00:00, 7.02MB/s]\n",
+      " 86%|████████████████████████████████▊     | 1.00M/1.16M [00:00<00:00, 5.52MB/s]\n",
+      "100%|██████████████████████████████████████| 1.16M/1.16M [00:00<00:00, 6.17MB/s]\n",
       "Archive:  cumulative.csv.zip\n",
       "  inflating: cumulative.csv          \n"
      ]
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "582f043c-222e-4724-8d00-1237ca3b9085",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "de6c2053-a5a1-48b6-aba3-7a806d5f8461",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "26264f32-6c1f-4d50-9d0a-8829ed32b282",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "d7c7a2cd-4cbb-4262-b1fe-cd0dabeca6cd",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "655a2f77-c67c-4df1-a99d-c1290f9a430c",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "2f93ea1e-5398-4ad3-ba9b-a4f5b3e4f179",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mSystemError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/95/v52kk6ys7s14hmmc3xm7b1xr0000gn/T/ipykernel_11797/457148650.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'invalid command'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     raise SystemError('''\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mAn\u001b[0m \u001b[0merror\u001b[0m \u001b[0moccurred\u001b[0m \u001b[0mwhen\u001b[0m \u001b[0mrunning\u001b[0m \u001b[0;34m\"kaggle datasets download\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mYou\u001b[0m \u001b[0mmust\u001b[0m \u001b[0meither\u001b[0m \u001b[0mfollow\u001b[0m \u001b[0mthe\u001b[0m \u001b[0minstructions\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0minstalling\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mKaggle\u001b[0m \u001b[0mAPI\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/95/v52kk6ys7s14hmmc3xm7b1xr0000gn/T/ipykernel_17317/457148650.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'invalid command'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     raise SystemError('''\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mAn\u001b[0m \u001b[0merror\u001b[0m \u001b[0moccurred\u001b[0m \u001b[0mwhen\u001b[0m \u001b[0mrunning\u001b[0m \u001b[0;34m\"kaggle datasets download\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mYou\u001b[0m \u001b[0mmust\u001b[0m \u001b[0meither\u001b[0m \u001b[0mfollow\u001b[0m \u001b[0mthe\u001b[0m \u001b[0minstructions\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0minstalling\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mKaggle\u001b[0m \u001b[0mAPI\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mSystemError\u001b[0m: \n        An error occurred when running \"kaggle datasets download\".\n        You must either follow the instructions for installing the Kaggle API\n        here https://github.com/Kaggle/kaggle-api or manually download the \n        data from here https://exoplanetarchive.ipac.caltech.edu/docs/data.html\n    "
      ]
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "64319651-f230-4fb3-962f-591d7b010c08",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "a60be956-2977-4e95-a509-86674dd23161",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "a56e53e7-8571-4c38-b1ed-ef6358a8b32d",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "749497dd-16cc-4923-a200-dc1cf4d8ba05",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "342471d2-832d-4d6a-99c1-724152710078",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "65d34119-cd93-4bc4-9bd4-d02523e1ea8f",
    "metadata": {},
    "outputs": [
@@ -839,7 +839,7 @@
        "koi_kepmag                    1         0.000105"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "e82acfdf-82eb-40aa-aa5d-5f57beac15f5",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
        "(9564, 50)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "4e4b69fc-928e-4d8c-b5ce-c1dd86a83c59",
    "metadata": {},
    "outputs": [
@@ -894,7 +894,7 @@
        "(7803, 47)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "6f45f37f-2ea4-459b-9ad8-7e9b7c1c51e2",
    "metadata": {},
    "outputs": [
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "04667af9-ba86-4c81-93be-dbf9901e55be",
    "metadata": {},
    "outputs": [
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "1b64200f-6c6f-42d7-bc8b-b20ef0ec687f",
    "metadata": {},
    "outputs": [
@@ -1270,7 +1270,7 @@
        "koi_kepmag                    0              0.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "02254623-e8a5-4f92-9da5-d8a7e5ffa45b",
    "metadata": {},
    "outputs": [
@@ -1354,11 +1354,123 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86f41f0d-86b0-46d1-b855-e01de78c3447",
+   "id": "ce2db2fb-181a-49c0-936a-0d2666bc7881",
    "metadata": {},
    "source": [
     "That took care of all the missing values.\n",
     "\n",
+    "### Removing Observations With Candidate Disposition\n",
+    "\n",
+    "Some observations in the data contain a disposition of \"CANDIDATE\". Since we are only interested in false positives and confirmed exoplanets these will need to be removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a4d519c5-2f0d-4baa-a779-ddcd0ba57d99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['CONFIRMED', 'FALSE POSITIVE', 'CANDIDATE'], dtype=object)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kepler.koi_disposition.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7b81f24a-7987-455b-9516-c17cac6fc305",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1772"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's see how many observations are candidates.\n",
+    "kepler.koi_disposition.value_counts()['CANDIDATE']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd84a8fe-e85b-438b-88f8-3d527ca247ce",
+   "metadata": {},
+   "source": [
+    "Well it's a shame to lose all those observations, but there is nothing we can do about it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "278a0e65-2b87-40d3-b802-cf1ba9a9e630",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove all observations with a candidate disposition\n",
+    "not_candidate = ~(kepler.koi_disposition == 'CANDIDATE')\n",
+    "kepler = kepler[not_candidate]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bb0e8c5e-5244-4f60-8ef0-70bcdf8b57af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6031, 47)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kepler.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "448adbf2-3b40-48af-8dcd-385cfe72cdf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of rows remaining: 63%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Percentage of rows remaining: {6031 / 9564:.0%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6578cb5c-78d6-4a43-ba58-ebe7b0582a11",
+   "metadata": {},
+   "source": [
     "### Dropping Additional Columns\n",
     "\n",
     "There are some id columns that will likely not be very useful to us. Let's first see what rowid and kepid are."
@@ -1366,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "3d407e62-3e62-485e-8ac5-9530e6edf226",
    "metadata": {},
    "outputs": [
@@ -1434,7 +1546,7 @@
        "4      5  10854555"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "id": "537334d4-9774-43bb-8afa-0c76d3e783ae",
    "metadata": {},
    "outputs": [
@@ -1468,7 +1580,7 @@
        "Name: kepoi_name, dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,17 +1599,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "id": "5b25fca2-db17-43c2-8ce8-99cb122e7232",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7803, 44)"
+       "(6031, 44)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "4b1b672d-5093-4d68-aefb-a55bcdb610d9",
    "metadata": {},
    "outputs": [
@@ -1538,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "id": "fe6eb40e-2780-4741-ad00-83226bed74bb",
    "metadata": {},
    "outputs": [
@@ -1559,7 +1671,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,13 +1693,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "id": "b021c43f-e07a-45d3-84d4-2d50c5901c93",
    "metadata": {},
    "outputs": [],
    "source": [
     "def prepare_kepler(df):\n",
     "    df = drop_missing_values(df, 0.75, 1)\n",
+    "    \n",
+    "    not_candidate = ~(df.koi_disposition == 'CANDIDATE')\n",
+    "    df = df[not_candidate]\n",
     "    \n",
     "    columns_to_drop = [\n",
     "        'rowid',\n",
@@ -1606,17 +1721,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "id": "677c1261-2f97-4e1e-a8d4-9f4f4806ca84",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7803, 44)"
+       "(6031, 44)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
