:white_check_mark: Completed modeling.
Changes to be committed:
	modified:   model.ipynb

model: Completed the modeling phase of the pipeline producing a model
    with roughly 90% accuracy on unseen data.

--- a/model.ipynb
+++ b/model.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "c0c47424-7ed8-4812-bd76-d1b875d93ecb",
    "metadata": {},
    "outputs": [],
@@ -456,15 +456,15 @@
     {
      "data": {
       "text/plain": [
-       "{1: <model.Model at 0x7fc59f7f2bb0>,\n",
-       " 2: <model.Model at 0x7fc59ab3a340>,\n",
-       " 3: <model.Model at 0x7fc59ab248e0>,\n",
-       " 4: <model.Model at 0x7fc59ab3a790>,\n",
-       " 5: <model.Model at 0x7fc59ab3afa0>,\n",
-       " 6: <model.Model at 0x7fc59ab24fa0>,\n",
-       " 7: <model.Model at 0x7fc59ab249a0>,\n",
-       " 8: <model.Model at 0x7fc59f7eb070>,\n",
-       " 9: <model.Model at 0x7fc59f7cc1c0>}"
+       "{1: <model.Model at 0x7fa8711b6dc0>,\n",
+       " 2: <model.Model at 0x7fa880e04a30>,\n",
+       " 3: <model.Model at 0x7fa8711b68b0>,\n",
+       " 4: <model.Model at 0x7fa880e43f10>,\n",
+       " 5: <model.Model at 0x7fa88209bf70>,\n",
+       " 6: <model.Model at 0x7fa880de6c40>,\n",
+       " 7: <model.Model at 0x7fa880e046d0>,\n",
+       " 8: <model.Model at 0x7fa880df8700>,\n",
+       " 9: <model.Model at 0x7fa870b12160>}"
       ]
      },
      "execution_count": 13,
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "ddd496d5-b553-46bb-9c45-4a493746dc5c",
    "metadata": {},
    "outputs": [],
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "id": "03d0b83a-fdb1-4af7-90f7-4bce3fae8860",
    "metadata": {},
    "outputs": [],
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "c5a8c827-135b-4681-86f5-9a64a80cc7cf",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1058,7 @@
        "[154 rows x 6 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "id": "36283e51-a171-435b-a03f-bcd49203988d",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1088,7 @@
        "                           random_state=24)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "id": "3b77df5e-5575-4f09-90b2-ec54e7f4e2b9",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1111,7 @@
        " 'validate_precision': 0.7850799289520426}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,12 +1122,331 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7aaf0eb5-7fe4-47c0-9752-29bd913e0464",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Adding More Features\n",
+    "\n",
+    "Finally, let's progressively add more features to the model to see if adding more features improves our model's performance."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "54e4f4bb-9b81-472d-a4e5-b28a9037410e",
+   "execution_count": 21,
+   "id": "bf65611c-64eb-4b04-8532-53848e6551ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Here we will define our features in the order RFE ranked them.\n",
+    "features = [\n",
+    "    'planetary_radius',\n",
+    "    'orbital_period',\n",
+    "    'normalized_depth',\n",
+    "    'transit_depth',\n",
+    "    'transit_duration',\n",
+    "    'temperature'\n",
+    "]\n",
+    "\n",
+    "GBC_models_more_features = {}\n",
+    "\n",
+    "# Now we'll add features one at a time and produce models along the way.\n",
+    "# We start with 3 since we already have a model with 2 features.\n",
+    "for n in range(3, len(features) + 1):\n",
+    "    GBC_models_more_features[f'GBC_104_{n}_features'] = Model(\n",
+    "        GradientBoostingClassifier(\n",
+    "            loss = 'exponential',\n",
+    "            n_estimators = 300,\n",
+    "            random_state = random_seed\n",
+    "        ),\n",
+    "        train,\n",
+    "        features[ : n],\n",
+    "        'disposition'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4cf1d813-621d-4bdf-8f46-e885864f9035",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we evaluate.\n",
+    "for index, model in enumerate(GBC_models_more_features.values()):\n",
+    "    eval_df = append_results(\n",
+    "        f'GBC_104_{index + 3}_features',\n",
+    "        {\n",
+    "            **evaluate(train.disposition, model.make_predictions(train), 'CONFIRMED', prefix = 'train_'),\n",
+    "            **evaluate(validate.disposition, model.make_predictions(validate), 'CONFIRMED', prefix = 'validate_')\n",
+    "        },\n",
+    "        eval_df\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5db963c1-18a7-4b32-a4d1-233e10a19c4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>train_recall</th>\n",
+       "      <th>train_precision</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>validate_recall</th>\n",
+       "      <th>validate_precision</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GBC_104_6_features</th>\n",
+       "      <td>0.954976</td>\n",
+       "      <td>0.956659</td>\n",
+       "      <td>0.926011</td>\n",
+       "      <td>0.899862</td>\n",
+       "      <td>0.889908</td>\n",
+       "      <td>0.850877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBC_104_5_features</th>\n",
+       "      <td>0.949348</td>\n",
+       "      <td>0.952719</td>\n",
+       "      <td>0.915909</td>\n",
+       "      <td>0.895028</td>\n",
+       "      <td>0.880734</td>\n",
+       "      <td>0.846561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBC_104_4_features</th>\n",
+       "      <td>0.928318</td>\n",
+       "      <td>0.933018</td>\n",
+       "      <td>0.882923</td>\n",
+       "      <td>0.883287</td>\n",
+       "      <td>0.884404</td>\n",
+       "      <td>0.819728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBC_104_3_features</th>\n",
+       "      <td>0.922393</td>\n",
+       "      <td>0.930654</td>\n",
+       "      <td>0.871587</td>\n",
+       "      <td>0.875000</td>\n",
+       "      <td>0.856881</td>\n",
+       "      <td>0.819298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBC_104</th>\n",
+       "      <td>0.894254</td>\n",
+       "      <td>0.897557</td>\n",
+       "      <td>0.833821</td>\n",
+       "      <td>0.845304</td>\n",
+       "      <td>0.811009</td>\n",
+       "      <td>0.785080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBC_40</th>\n",
+       "      <td>0.917654</td>\n",
+       "      <td>0.921986</td>\n",
+       "      <td>0.867309</td>\n",
+       "      <td>0.843232</td>\n",
+       "      <td>0.796330</td>\n",
+       "      <td>0.789091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBC_89</th>\n",
+       "      <td>0.908175</td>\n",
+       "      <td>0.912530</td>\n",
+       "      <td>0.853353</td>\n",
+       "      <td>0.842541</td>\n",
+       "      <td>0.805505</td>\n",
+       "      <td>0.782531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBC_112</th>\n",
+       "      <td>0.903436</td>\n",
+       "      <td>0.907013</td>\n",
+       "      <td>0.846946</td>\n",
+       "      <td>0.841851</td>\n",
+       "      <td>0.801835</td>\n",
+       "      <td>0.783154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gradient Boosting</th>\n",
+       "      <td>0.872334</td>\n",
+       "      <td>0.868400</td>\n",
+       "      <td>0.806735</td>\n",
+       "      <td>0.841160</td>\n",
+       "      <td>0.803670</td>\n",
+       "      <td>0.780749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBC_82</th>\n",
+       "      <td>0.922393</td>\n",
+       "      <td>0.932230</td>\n",
+       "      <td>0.870493</td>\n",
+       "      <td>0.841160</td>\n",
+       "      <td>0.794495</td>\n",
+       "      <td>0.785844</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    train_accuracy  train_recall  train_precision  \\\n",
+       "GBC_104_6_features        0.954976      0.956659         0.926011   \n",
+       "GBC_104_5_features        0.949348      0.952719         0.915909   \n",
+       "GBC_104_4_features        0.928318      0.933018         0.882923   \n",
+       "GBC_104_3_features        0.922393      0.930654         0.871587   \n",
+       "GBC_104                   0.894254      0.897557         0.833821   \n",
+       "GBC_40                    0.917654      0.921986         0.867309   \n",
+       "GBC_89                    0.908175      0.912530         0.853353   \n",
+       "GBC_112                   0.903436      0.907013         0.846946   \n",
+       "Gradient Boosting         0.872334      0.868400         0.806735   \n",
+       "GBC_82                    0.922393      0.932230         0.870493   \n",
+       "\n",
+       "                    validate_accuracy  validate_recall  validate_precision  \n",
+       "GBC_104_6_features           0.899862         0.889908            0.850877  \n",
+       "GBC_104_5_features           0.895028         0.880734            0.846561  \n",
+       "GBC_104_4_features           0.883287         0.884404            0.819728  \n",
+       "GBC_104_3_features           0.875000         0.856881            0.819298  \n",
+       "GBC_104                      0.845304         0.811009            0.785080  \n",
+       "GBC_40                       0.843232         0.796330            0.789091  \n",
+       "GBC_89                       0.842541         0.805505            0.782531  \n",
+       "GBC_112                      0.841851         0.801835            0.783154  \n",
+       "Gradient Boosting            0.841160         0.803670            0.780749  \n",
+       "GBC_82                       0.841160         0.794495            0.785844  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_df.sort_values(by = 'validate_accuracy', ascending = False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c03bec3-bea6-423b-9a7c-83cc2a0cb307",
+   "metadata": {},
+   "source": [
+    "It looks like adding more features does make a significant difference in performance. Adding in all 6 features greatly improves the performance from the model with just 2 features and also has slightly better performance than the model with 5 features.\n",
+    "\n",
+    "The drop off in performance between train and validate isn't too much either. A drop of about 5.5% in accuracy and 7.5% in precision is within an acceptable range, where an acceptable range would be between 1% and 10%. An accuracy of nearly 90% on unseen data is very good meaning the model misclassified only 10% of the data, or roughly 145 observations in validate.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Evaluate on Test\n",
+    "\n",
+    "Finally let's use our best model to evaluate on the test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "29a62c86-8b26-439d-a34d-6573895a4fb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test_accuracy</th>\n",
+       "      <th>test_recall</th>\n",
+       "      <th>test_precision</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GBC_104_6_features</th>\n",
+       "      <td>0.893123</td>\n",
+       "      <td>0.909692</td>\n",
+       "      <td>0.824351</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    test_accuracy  test_recall  test_precision\n",
+       "GBC_104_6_features       0.893123     0.909692        0.824351"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "append_results(\n",
+    "    'GBC_104_6_features',\n",
+    "    evaluate(\n",
+    "        test.disposition,\n",
+    "        GBC_models_more_features['GBC_104_6_features'].make_predictions(test),\n",
+    "        positive_label = 'CONFIRMED',\n",
+    "        prefix = 'test_'\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4e3db66-d3f4-4677-b4f2-5fea7832339b",
+   "metadata": {},
+   "source": [
+    "The results are fairly consistent with the results obtained for the validate set which means we do not have an overfit model.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "To conclude, we were able to produce a Gradient Boosting Classifier model with hyper-parameters \"exponential\" for loss, 300 for n_estimators, and a max_depth of 3 that has nearly 90% accuracy on unseen data which is roughly 27 percentage points better than the baseline. The features used in this model were planetary_radius, orbital_period, normalized_depth, transit_depth, transit_duration, and temperature.\n",
+    "\n",
+    "This model was compared to 157 other models using various algorithms, number of features, and hyper-parameters. The drop off in performance between the training set and unseen data was within an acceptable range indicating that the model is not overfit."
+   ]
   }
  ],
  "metadata": {
