:file_folder: Create util directory.
Changes to be committed:
	modified:   README.md
	modified:   kepler_exoplanet_report.ipynb
	modified:   notebooks/explore.ipynb
	new file:   notebooks/kepler.csv
	modified:   notebooks/model.ipynb
	modified:   notebooks/wrangle.ipynb
	renamed:    acquire.py -> util/acquire.py
	renamed:    acquire_kepler.py -> util/acquire_kepler.py
	renamed:    baseline.py -> util/baseline.py
	renamed:    bivariate_analysis.py -> util/bivariate_analysis.py
	renamed:    evaluate.py -> util/evaluate.py
	renamed:    explore.py -> util/explore.py
	renamed:    model.py -> util/model.py
	renamed:    prepare.py -> util/prepare.py
	renamed:    preprocessing.py -> util/preprocessing.py
	renamed:    univariate_analysis.py -> util/univariate_analysis.py
	renamed:    wrangle.py -> util/wrangle.py

util: Created a util to hold all .py files for organization purposes.

README: Corrected back to top link. Updated repository format.

kepler_exoplanet_report: Added sys.path.append for util directory in
    final report to allow the rest of the file to remain as is.

notebooks: Added sys.path.append for util directory in all working
    notebooks to allow the rest of the files to remain as is.

--- a/kepler_exoplanet_report.ipynb
+++ b/kepler_exoplanet_report.ipynb
@@ -48,7 +48,12 @@
     "# We would like to ignore any warnings that may be provided by our libraries.\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "# All the python files containing the functions used in this notebook are located in the util directory.\n",
+    "# In order to import these modules we must add the util directory path to sys.path.\n",
+    "import sys\n",
+    "sys.path.append('util')"
    ]
   },
   {
@@ -692,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "9bf23283-5371-4b48-9a1a-28aeaecf8273",
    "metadata": {},
    "outputs": [
@@ -738,7 +743,7 @@
        "Gradient Boosting Variant 2           0.89         0.89            0.82"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
