--- a/notebooks/explore.ipynb
+++ b/notebooks/explore.ipynb
@@ -18,7 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
+   "id": "592b5d19-bd8b-427f-926c-1a754f4ced34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We'll need to add the util directory path to sys.path since this is where all the .py files are located.\n",
+    "import sys\n",
+    "sys.path.append('../util')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "65642e3e-493f-4a74-9fbc-00c6f606efe6",
    "metadata": {},
    "outputs": [],
