--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -19,6 +19,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a4e14a70-9c52-4aa2-b12b-a82525bc6bbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We'll need to add the util directory path to sys.path since this is where all the .py files are located.\n",
+    "import sys\n",
+    "sys.path.append('../util')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "c0c47424-7ed8-4812-bd76-d1b875d93ecb",
    "metadata": {},
    "outputs": [],
