--- a/notebooks/wrangle.ipynb
+++ b/notebooks/wrangle.ipynb
@@ -19,6 +19,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "3b29b7c9-f03a-4ef1-8039-c3d119ec79cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We'll need to add the util directory path to sys.path since this is where all the .py files are located.\n",
+    "import sys\n",
+    "sys.path.append('../util')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "60f3efb1-c279-401f-ad0c-5dfa8baf13d6",
    "metadata": {},
    "outputs": [],
@@ -69,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a0ac12be-bc5b-4df1-bbfe-2f432496e40c",
    "metadata": {},
    "outputs": [
@@ -77,9 +89,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading cumulative.csv.zip to /Users/whoami/Repositories/kepler-exoplanet-analysis\n",
-      " 86%|████████████████████████████████▊     | 1.00M/1.16M [00:00<00:00, 5.52MB/s]\n",
-      "100%|██████████████████████████████████████| 1.16M/1.16M [00:00<00:00, 6.17MB/s]\n",
+      "Downloading cumulative.csv.zip to /Users/peanutbutterandchocolate/Repositories/kepler-exoplanet-analysis/notebooks\n",
+      " 86%|████████████████████████████████▊     | 1.00M/1.16M [00:00<00:00, 6.26MB/s]\n",
+      "100%|██████████████████████████████████████| 1.16M/1.16M [00:00<00:00, 7.00MB/s]\n",
       "Archive:  cumulative.csv.zip\n",
       "  inflating: cumulative.csv          \n"
      ]
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "582f043c-222e-4724-8d00-1237ca3b9085",
    "metadata": {},
    "outputs": [
@@ -192,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "de6c2053-a5a1-48b6-aba3-7a806d5f8461",
    "metadata": {},
    "outputs": [],
@@ -219,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "26264f32-6c1f-4d50-9d0a-8829ed32b282",
    "metadata": {},
    "outputs": [],
@@ -231,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d7c7a2cd-4cbb-4262-b1fe-cd0dabeca6cd",
    "metadata": {},
    "outputs": [],
@@ -242,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "655a2f77-c67c-4df1-a99d-c1290f9a430c",
    "metadata": {},
    "outputs": [],
@@ -266,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2f93ea1e-5398-4ad3-ba9b-a4f5b3e4f179",
    "metadata": {},
    "outputs": [
@@ -284,7 +296,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mSystemError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/95/v52kk6ys7s14hmmc3xm7b1xr0000gn/T/ipykernel_17317/457148650.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'invalid command'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     raise SystemError('''\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mAn\u001b[0m \u001b[0merror\u001b[0m \u001b[0moccurred\u001b[0m \u001b[0mwhen\u001b[0m \u001b[0mrunning\u001b[0m \u001b[0;34m\"kaggle datasets download\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mYou\u001b[0m \u001b[0mmust\u001b[0m \u001b[0meither\u001b[0m \u001b[0mfollow\u001b[0m \u001b[0mthe\u001b[0m \u001b[0minstructions\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0minstalling\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mKaggle\u001b[0m \u001b[0mAPI\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/45/z3vf0vrn1fz5mzs6sp418wym0000gn/T/ipykernel_2992/457148650.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'invalid command'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     raise SystemError('''\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mAn\u001b[0m \u001b[0merror\u001b[0m \u001b[0moccurred\u001b[0m \u001b[0mwhen\u001b[0m \u001b[0mrunning\u001b[0m \u001b[0;34m\"kaggle datasets download\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mYou\u001b[0m \u001b[0mmust\u001b[0m \u001b[0meither\u001b[0m \u001b[0mfollow\u001b[0m \u001b[0mthe\u001b[0m \u001b[0minstructions\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0minstalling\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mKaggle\u001b[0m \u001b[0mAPI\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mSystemError\u001b[0m: \n        An error occurred when running \"kaggle datasets download\".\n        You must either follow the instructions for installing the Kaggle API\n        here https://github.com/Kaggle/kaggle-api or manually download the \n        data from here https://exoplanetarchive.ipac.caltech.edu/docs/data.html\n    "
      ]
     }
@@ -305,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "64319651-f230-4fb3-962f-591d7b010c08",
    "metadata": {},
    "outputs": [
@@ -340,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a60be956-2977-4e95-a509-86674dd23161",
    "metadata": {},
    "outputs": [],
@@ -350,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a56e53e7-8571-4c38-b1ed-ef6358a8b32d",
    "metadata": {},
    "outputs": [],
@@ -361,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "749497dd-16cc-4923-a200-dc1cf4d8ba05",
    "metadata": {},
    "outputs": [],
@@ -398,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "342471d2-832d-4d6a-99c1-724152710078",
    "metadata": {},
    "outputs": [
@@ -406,7 +418,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading from .csv file.\n",
+      "Reading from source.\n",
+      "Downloading cumulative.csv.zip to /Users/peanutbutterandchocolate/Repositories/kepler-exoplanet-analysis/notebooks\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0.00/1.16M [00:00<?, ?B/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Archive:  cumulative.csv.zip\n",
+      "  inflating: cumulative.csv          \n",
+      "Cacheing data.\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 9564 entries, 0 to 9563\n",
       "Data columns (total 50 columns):\n",
@@ -465,6 +495,13 @@
       "dtypes: float64(39), int64(6), object(5)\n",
       "memory usage: 3.6+ MB\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1.16M/1.16M [00:00<00:00, 4.86MB/s]\n"
+     ]
     }
    ],
    "source": [
@@ -501,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "65d34119-cd93-4bc4-9bd4-d02523e1ea8f",
    "metadata": {},
    "outputs": [
@@ -839,7 +876,7 @@
        "koi_kepmag                    1         0.000105"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e82acfdf-82eb-40aa-aa5d-5f57beac15f5",
    "metadata": {},
    "outputs": [
@@ -873,7 +910,7 @@
        "(9564, 50)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "4e4b69fc-928e-4d8c-b5ce-c1dd86a83c59",
    "metadata": {},
    "outputs": [
@@ -894,7 +931,7 @@
        "(7803, 47)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "6f45f37f-2ea4-459b-9ad8-7e9b7c1c51e2",
    "metadata": {},
    "outputs": [
@@ -932,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "04667af9-ba86-4c81-93be-dbf9901e55be",
    "metadata": {},
    "outputs": [
@@ -950,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "1b64200f-6c6f-42d7-bc8b-b20ef0ec687f",
    "metadata": {},
    "outputs": [
@@ -1270,7 +1307,7 @@
        "koi_kepmag                    0              0.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "02254623-e8a5-4f92-9da5-d8a7e5ffa45b",
    "metadata": {},
    "outputs": [
@@ -1417,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "278a0e65-2b87-40d3-b802-cf1ba9a9e630",
    "metadata": {},
    "outputs": [],
@@ -1429,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "bb0e8c5e-5244-4f60-8ef0-70bcdf8b57af",
    "metadata": {},
    "outputs": [
@@ -1439,7 +1476,7 @@
        "(6031, 47)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "448adbf2-3b40-48af-8dcd-385cfe72cdf7",
    "metadata": {},
    "outputs": [
@@ -1478,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "3d407e62-3e62-485e-8ac5-9530e6edf226",
    "metadata": {},
    "outputs": [
@@ -1546,7 +1583,7 @@
        "4      5  10854555"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "537334d4-9774-43bb-8afa-0c76d3e783ae",
    "metadata": {},
    "outputs": [
@@ -1580,7 +1617,7 @@
        "Name: kepoi_name, dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "5b25fca2-db17-43c2-8ce8-99cb122e7232",
    "metadata": {},
    "outputs": [
@@ -1609,7 +1646,7 @@
        "(6031, 44)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1621,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "4b1b672d-5093-4d68-aefb-a55bcdb610d9",
    "metadata": {},
    "outputs": [
@@ -1650,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "id": "fe6eb40e-2780-4741-ad00-83226bed74bb",
    "metadata": {},
    "outputs": [
@@ -1671,7 +1708,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1693,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "b021c43f-e07a-45d3-84d4-2d50c5901c93",
    "metadata": {},
    "outputs": [],
@@ -1721,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "677c1261-2f97-4e1e-a8d4-9f4f4806ca84",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1768,7 @@
        "(6031, 44)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
